--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
+    <script src="libs/angular-jwt/dist/angular-jwt.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/controllers/mainCtrl.js"></script>
@@ -27,9 +28,9 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a href="#/users">Users</a></li>
-            <li><a href="#/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li ng-show="!isAuthenticated"><a href="#/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         </ul>
-        <form class="navbar-form navbar-right" role="form" ng-submit="login()">
+        <form class="navbar-form navbar-right" role="form" ng-show="!isAuthenticated" ng-submit="login()">
             <div class="form-group">
                 <input type="text" style="width:10em;" placeholder="User name" class="form-control"
                        ng-model="user.userName">
@@ -40,6 +41,9 @@
             </div>
             <button type="submit" class="btn btn-success">Sign in!</button>
         </form>
+        <div class="navbar-right" ng-show="isAuthenticated">
+            <p class="navbar-text">Logged on as: {{userName}}</p>
+        </div>
     </nav>
     <div ng-view></div>
 </div>
